# projeto-monitoria

./: README.md  pyproject.toml
backend/: .env  .gitignore  README.md  docker-compose.mongo.yml  pyproject.toml
backend/src/config/: __init__.py  env.py
backend/src/infra/db/: mongodb_manager.py
backend/src/module/: __init__.py
backend/src/module/query/api/routes/: __init__.py  query_routes.py
backend/src/module/query/application/services/: __init__.py  query_service.py
backend/src/module/query/schemas/: __init__.py
backend/src/module/question/domain/: __init__.py  answer.py  question.py
backend/src/module/question/schemas/: __init__.py  answer_schema.py  question_create.py  question_response.py
datasets/: vendas.csv
src/: main.py
src/infra/db/: __init__.py  duckdb_manager.py
src/module/: api_routes.py
src/module/file/api/routes/: __init__.py  file_routes.py
src/module/file/application/services/: __init__.py  file_service.py
src/module/query/schemas/: query_schema.py
src/module/question/domain/: Question.py
