[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.4.4",
    "fastapi>=0.135.1",
    "motor[srv]>=3.7.1",
    "odmantic>=1.1.0",
    "python-multipart>=0.0.22",
    "uvicorn>=0.41.0",
]
